# OpenRig-plugins

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/openrig-check-updates/: SKILL.md
.claude/skills/openrig-code-quality/: README.md  SKILL.md
.github/workflows/: build-libs.yml
.plugins/lv2/: SOURCES.md
.plugins/lv2/Black_Pearl_4A.lv2/: manifest.ttl
.plugins/lv2/Black_Pearl_4B.lv2/: manifest.ttl
.plugins/lv2/Black_Pearl_5.lv2/: manifest.ttl
.plugins/lv2/ChowCentaur.lv2/: manifest.ttl
.plugins/lv2/FluidBass.lv2/: manifest.ttl
.plugins/lv2/FluidDrums.lv2/: manifest.ttl
.plugins/lv2/FluidGuitars.lv2/: manifest.ttl
.plugins/lv2/FluidReeds.lv2/: manifest.ttl
.plugins/lv2/FluidSoundFX.lv2/: manifest.ttl
.plugins/lv2/FluidStrings.lv2/: manifest.ttl
.plugins/lv2/FluidSynthFX.lv2/: manifest.ttl
.plugins/lv2/Harmless.lv2/: manifest.ttl
.plugins/lv2/MOD-CabinetLoader.lv2/: manifest.ttl
.plugins/lv2/Modulay.lv2/: manifest.ttl
.plugins/lv2/OJD.lv2/: manifest.ttl
.plugins/lv2/PingPongPan.lv2/: manifest.ttl
.plugins/lv2/Red_Zeppelin_5.lv2/: manifest.ttl
.plugins/lv2/ZamComp.lv2/: manifest.ttl
.plugins/lv2/ZamCompX2.lv2/: ZamCompX2_ui.ttl
.plugins/lv2/abGate.lv2/: manifest.ttl
.plugins/lv2/b_synth/: manifest.ttl
.plugins/lv2/b_whirl_mod/: b_whirl.ttl
.plugins/lv2/distrho-a-fluidsynth.lv2/: manifest.ttl
.plugins/lv2/fat1.lv2/: manifest.ttl
.plugins/lv2/gx_amp.lv2/: default-preset.ttl
.plugins/lv2/mclk.lv2/: manifest.ttl
.plugins/lv2/midi-switchbox_1-3.lv2/: manifest.ttl
.plugins/lv2/midi-switchbox_2-1.lv2/: manifest.ttl
.plugins/lv2/midi-switchbox_3-1.lv2/: manifest.ttl
.plugins/lv2/midigen.lv2/: manifest.ttl
.plugins/lv2/mod-ams.lv2/: manifest.ttl
.plugins/lv2/mod-bpf.lv2/: manifest.ttl
docker/: Dockerfile.build-libs
docs/: blocks-reference.md
scripts/: .tone_cache.json  .update_state.json  add-dep.sh  build-lib-internal.sh  build-lib.sh  bundle-into-openrig.sh  check_updates.py  gen_quick_reference.py  import-thumbnails.sh  import_captures.py  native_models.yaml  param_gate.py  plugin-recipes.tsv  test_check_updates.py  tone3000_import.py  tone3000_specs.json  tone3000_specs_round2.json  tone3000_specs_round3.json  tone3000_specs_round4.json  tone3000_specs_round5.json  tone3000_specs_round6.json
scripts/recipes/: lv2.sh  vst3.sh
tools/: collect_screenshots.sh  gen_pedal_models.py  test_gen_pedal_models.py
tools/build_plugin_bundle/: Cargo.toml
tools/extract_plugins/: Cargo.toml
tools/loudness_audit/: Cargo.toml
tools/loudness_audit/src/: lib.rs  limiter.rs  main.rs  nam_gate_audit.rs  qa.rs  qa_audit.rs  qa_fix.rs  selector.rs  wav_fix.rs
tools/loudness_audit/tests/: catalog_lufs.rs
tools/nam_loudness_audit/: Cargo.toml
tools/nam_loudness_audit/src/: catalog.rs  ir.rs  lib.rs  loudness.rs  main.rs  synthetic_di.rs
tools/nam_loudness_audit/tests/: catalog_levelling.rs  catalog_lufs.rs
tools/pack_plugins/: Cargo.toml
tools/pack_plugins/src/: main.rs
(+9466 files in other folders)
