[workspace]
members = [
  "tools/pack_plugins",
  "tools/nam_loudness_audit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
# plugin-loader is the schema/validator/loader crate that lives in the
# OpenRig repo. Tracks `develop` so schema changes (e.g. Bool variant in
# ParameterValue, #401) reach the bundle workflow at the same dev cycle
# they ship. Main is reserved for stable releases.
plugin-loader = { git = "https://github.com/jpfaria/OpenRig.git", branch = "develop" }
