[package]
name = "loudness-audit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
nam = { git = "https://github.com/jpfaria/OpenRig.git", branch = "develop" }
bs1770 = "1"
hound = "3"
realfft = "3"

[[bin]]
name = "loudness_audit"
path = "src/main.rs"

[lib]
name = "loudness_audit"
path = "src/lib.rs"
