[package]
name = "pack_plugins"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pack_plugins"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
sha2 = "0.10"
thiserror.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
plugin-loader.workspace = true
